# vhdl-codegen

./: .gitignore  README.md  stack.yaml  vhdl-codegen.cabal
Control/Monad/: Uniq.hs
Language/VHDL/Codegen/: Gensym.hs  Instances.hs  Lift.hs  Monad.hs  Nat.hs  Pack.hs  Pipeline.hs  SLV.hs  Testbench.hs  Trans.hs  VExp.hs  Vec.hs
Language/VHDL/Codegen/Pipeline/: Shallow.hs  Testbench.hs  VHDL.hs
Language/VHDL/Codegen/Pipeline/VHDL/: Testbench.hs
Language/VHDL/Codegen/VExp/: Vec.hs
examples/convencoder/: .gitignore  Makefile  run.py
examples/cordic/: CORDIC.hs  Main.hs  Test.hs
examples/divider/: .gitignore  Divider.hs  Main.hs  Makefile  Test.hs  run.py
examples/divider/data/: in.csv  out.csv
examples/incrementer/: .gitignore  Main.hs  Makefile  Opt.hs  rebuild.tcl  run.py
examples/incrementer/cons/: consts_ooc.xdc
examples/incrementer/tcl/: ooc.tcl
examples/mealy/: .gitignore  Makefile
examples/mealy/src/: Main.hs
examples/moore/: Makefile
examples/moore/data/: in.csv
examples/moore/src/: Main.hs
tests/: Main.hs
