name:          vhdl-codegen
version:       0.1
cabal-version: >= 1.10
license:       BSD3
license-file:  LICENSE
copyright:     (c) 2016-2021 Drexel University
author:        Geoffrey Mainland <mainland@drexel.edu>
maintainer:    Geoffrey Mainland <mainland@drexel.edu>
stability:     alpha
homepage:      https://github.com/mainland/vhdl-codegen
bug-reports:   https://github.com/mainland/vhdl-codegen/issues
category:      Language
synopsis:      VHDL code generation library.
tested-with:   GHC==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4
               || ==8.10.4 || ==9.0.1

description:
  This package provides support for VHDL code generation.

build-type: Simple

library
  default-language: Haskell2010

  build-depends:
    base                   >= 4.5   && < 5,
    containers             >= 0.4   && < 0.7,
    exception-mtl          >= 0.3   && < 0.5,
    exception-transformers >= 0.3   && < 0.5,
    extra                  >= 1.6   && < 1.7,
    fixed-q                >= 0.1   && < 0.2,
    haskell-src-exts       >= 1.21  && < 1.22,
    haskell-src-meta       >= 0.4   && < 0.9,
    language-vhdl-quote    >= 0.1   && < 0.2,
    mainland-pretty        >= 0.6   && < 0.8,
    mtl                    >= 2.0   && < 3,
    primitive              >= 0.6   && < 0.8,
    ref-fd                 >= 0.3   && < 0.5,
    srcloc                 >= 0.4   && < 0.6,
    syb                    >= 0.3   && < 0.8,
    symbol                 >= 0.1   && < 0.3,
    text                   >= 1.2   && < 1.3,
    transformers           >= 0.2   && < 0.6,
    template-haskell,
    QuickCheck             >= 2.13  && < 2.14

  exposed-modules:
    Control.Monad.Uniq
    Language.VHDL.Codegen.Gensym
    Language.VHDL.Codegen.Instances
    Language.VHDL.Codegen.Lift
    Language.VHDL.Codegen.Monad
    Language.VHDL.Codegen.Pack
    Language.VHDL.Codegen.Pipeline
    Language.VHDL.Codegen.Testbench
    Language.VHDL.Codegen.Trans
    Language.VHDL.Codegen.VExp

  include-dirs: .

  ghc-options: -Wall

executable cordic
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples/cordic

  build-depends:
    vhdl-codegen,
    base                >= 4.5  && < 5,
    fixed-q             >= 0.1  && < 0.2,
    language-vhdl-quote >= 0.1  && < 0.2,
    mainland-pretty     >= 0.7  && < 0.8,
    numeric-extras      >= 0.1  && < 0.2,
    srcloc              >= 0.4  && < 0.6,
    QuickCheck          >= 2.13 && < 2.15

  other-modules:
    CORDIC

test-suite cordic-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   examples/cordic
  main-is:          Test.hs

  default-language: Haskell2010

  build-depends:
    HUnit           >= 1.2  && < 1.7,
    base            >= 4    && < 5,
    fixed-q         >= 0.1  && < 0.2,
    hspec           >= 2.5  && < 2.8,
    hspec-core      >= 2.5  && < 2.8,
    mainland-pretty >= 0.6  && < 0.8,
    numeric-extras  >= 0.1  && < 0.2,
    QuickCheck      >= 2.13 && < 2.14

  other-modules:
    CORDIC

executable divider
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples/divider

  build-depends:
    vhdl-codegen,
    base                >= 4.5 && < 5,
    containers          >= 0.5 && < 0.7,
    fixed-q             >= 0.1 && < 0.2,
    language-vhdl-quote >= 0.1 && < 0.2,
    mainland-pretty     >= 0.7 && < 0.8,
    srcloc              >= 0.4 && < 0.6

  other-modules:
    Opt

test-suite divider-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   examples/divider
  main-is:          Test.hs

  default-language: Haskell2010

  build-depends:
    HUnit           >= 1.2  && < 1.7,
    base            >= 4    && < 5,
    fixed-q         >= 0.1  && < 0.2,
    hspec           >= 2.5  && < 2.8,
    hspec-core      >= 2.5  && < 2.8,
    mainland-pretty >= 0.6  && < 0.8,
    QuickCheck      >= 2.13 && < 2.14

  other-modules:
    Divider

executable incrementer
  main-is: Main.hs
  default-language: Haskell2010
  hs-source-dirs:
    examples/incrementer

  build-depends:
    vhdl-codegen,
    base                >= 4.5 && < 5,
    containers          >= 0.5 && < 0.7,
    fixed-q             >= 0.1 && < 0.2,
    language-vhdl-quote >= 0.1 && < 0.2,
    mainland-pretty     >= 0.7 && < 0.8,
    srcloc              >= 0.4 && < 0.6

  other-modules:
    Opt

source-repository head
  type:     git
  location: git://github.com/mainland/vhdl-codegen.git
